--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
